--- a/web/student/home.xhtml
+++ b/web/student/home.xhtml
@@ -4,18 +4,42 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Estudiante - Página principal</title>
+        <link rel="stylesheet" type="text/css" href="../font-awesome-4.7.0/css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="../css/master.css" />
     </h:head>
     <h:body>
         <f:metadata>
             <f:event type="preRenderView" listener="#{sessionBean.validateSession}"/>
             <f:attribute name="typeRequired" value="#{userTypeBean.STUDENT}" />
         </f:metadata>
-        <h:messages></h:messages>
-        Welcome student <h:outputText value="#{sessionBean.names} #{sessionBean.surnames}" /><br />
-        <h:form>
-            <h:commandLink action="#{sessionBean.logout()}" value="Cerrar sesión" />
-        </h:form>
+        <div class="sidebar">
+            <div class="header">
+                <div class="row">
+                    <div class="col-10">
+                        <span class="fa fa-user-circle"></span> <h:outputText value=" #{sessionBean.names} #{sessionBean.surnames}" />
+                    </div>
+                    <div class="col-2">
+                        <h:form>
+                            <h:commandLink action="#{sessionBean.logout()}">
+                                <span class="fa fa-sign-out"></span>
+                            </h:commandLink>
+                        </h:form>
+                        <!--<a href="#" title="Cerrar sesión" ><span class="fa fa-sign-out"></span></a>-->
+                    </div>
+                </div>
+            </div>
+            <h:messages styleClass="text-info messages"></h:messages>
+            <ul class="nav">
+                <li><a href="#">Usuarios</a></li>
+                <li><a href="#">Grupos</a></li>
+            </ul>
+        </div>
+        <div class="container">
+            <h1>Bienvenido Alumno</h1>
+            <p>Navegue por las opciones utilizando el menú de la izquierda</p>
+        </div>
     </h:body>
 </html>
 
