--- a/web/administrator/home.xhtml
+++ b/web/administrator/home.xhtml
@@ -18,32 +18,45 @@
             <h:dataTable id="userTable" value="#{adminManager.adminTable}" var="at">
                 <h:column>
                     <f:facet name="header">First Names</f:facet>
-                    <h:inputText value="#{at.firstnames}" disabled="#{at.enable}"/>
+                    <h:outputText value="#{at.firstnames}" rendered="#{at.enable}"/>
+                    <h:inputText value="#{at.firstnames}" rendered="#{not at.enable}"/>
                 </h:column>
                 <h:column>
                     <f:facet name="header">Surnames</f:facet>
-                    <h:inputText value="#{at.surnames}" disabled="#{at.enable}"/>
+                    <h:outputText value="#{at.surnames}" rendered="#{at.enable}"/>
+                    <h:inputText value="#{at.surnames}" rendered="#{not at.enable}"/>
                 </h:column>
                 <h:column>
                     <f:facet name="header">Username</f:facet>
-                    <h:inputText value="#{at.username}"  disabled="#{at.enable}"/>
+                    <h:outputText value="#{at.username}" rendered="#{at.enable}"/>
+                    <h:inputText value="#{at.username}" rendered="#{not at.enable}"/>
                 </h:column>
                 <h:column>
                     <f:facet name="header">Password</f:facet>
-                    <h:inputSecret value="#{at.password}" disabled="#{at.enable}"/>
+                    <h:outputText value="#{at.password}" rendered="#{at.enable}"/>
+                    <h:inputText value="#{at.password}" rendered="#{not at.enable}"/>
                 </h:column>
                 <h:column>
                     <f:facet name="header">Type</f:facet>
-                    <h:inputText value="#{at.type}" disabled="#{at.enable}"/>
+                    <h:outputText value="#{at.type}" rendered="#{at.enable}"/>
+                    <h:selectOneMenu value = "#{at.type}" rendered="#{not at.enable}"> 
+                        <f:selectItem itemValue = "1" itemLabel = "Administrator" /> 
+                        <f:selectItem itemValue = "2" itemLabel = "Teacher" />
+                        <f:selectItem itemValue = "3" itemLabel = "Student" />
+                        <f:selectItem itemValue = "4" itemLabel = "none" />
+                    </h:selectOneMenu> 
                 </h:column>
                 <h:column>
-                    <h:commandLink value="Edit">
-                        <f:ajax render="userTable"/>
+                    <h:commandLink value="Edit" action="#{adminManager.editUser(at)}" rendered="#{at.enable}">
+                        <f:ajax render="@form"/>
+                    </h:commandLink>
+                    <h:commandLink value="Save" action="#{adminManager.saveUser(at)}" rendered="#{not at.enable}">
+                        <f:ajax render="@form"/>
                     </h:commandLink>
                 </h:column>
                 <h:column>
-                    <h:commandLink value="Cancel" action="#{adminManager.cancelEdit(at.iduser)}" rendered="#{not at.enable}" >
-                        <f:ajax event="click" render="@form" />
+                    <h:commandLink value="Cancel" action="#{adminManager.cancelEdit()}" rendered="#{not at.enable}" >
+                        <f:ajax render="@form" />
                     </h:commandLink>
                 </h:column>
                 <h:column>
