Integración de creación de diagramas en el sistema (aún en desarrollo)

--- a/web/student/exercises.xhtml
+++ b/web/student/exercises.xhtml
@@ -32,8 +32,7 @@
             <h:messages styleClass="text-info messages"></h:messages>
             <div class="nav">
                 <h:form>
-                    <h:inputHidden id="iduser" value="#{sessionBean.iduser}" />
-                    <h:commandLink action="#{exerciseManager.showGroupExercises()}" value="Ejercicios" />
+                    <h:link value="Ejercicios" styleClass="active" />
                 </h:form>
                 <h:form>
                     <h:link outcome="createDiagram" value="Crear Diagrama"  /> 
@@ -41,8 +40,23 @@
             </div>
         </div>
         <h:panelGroup layout="block" styleClass="container" id="container">
-            <h1>Bienvenido Alumno</h1>
-            <p>Navegue por las opciones utilizando el menú de la izquierda</p>
+            <h1>Ejercicios</h1>
+            <h:form id="exerciseForm">
+                <h:dataTable id="exerciseTable" value="#{exerciseManager.exerciseTable}" var="ex">
+                    <h:column>
+                        <f:facet name="header">Exercise</f:facet>
+                        <h:outputText value="#{ex.equation}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">Estado</f:facet>
+                        <h:outputText value="#{ex.status}"/>
+                    </h:column>
+                    <h:column>
+                        <h:inputHidden value="#{sessionBean.iduser}" id="iduser" />
+                        <h:link value="Resolver" />
+                    </h:column>
+                </h:dataTable>
+            </h:form>
         </h:panelGroup>
     </h:body>
 </html>
