--- a/web/student/createDiagram.xhtml
+++ b/web/student/createDiagram.xhtml
@@ -12,7 +12,6 @@
                 <span id="goal"></span>
                 <span id="current"></span>
                 <span id='mensaje'>Representa la ecuaci&oacute;n mostrada usando los bloques</span>
-                <input type="text" id="yeison" />
             </div>
             <div class="container">
                 <canvas id="c" width="800" height="400"></canvas>
@@ -27,8 +26,9 @@
                 <button id="subUnit" onclick="changeOption(3)">-1</button>
                 <hr />
                 <button class='control' onclick="removeAll()">Borrar Todo</button>
-                <h:form>
-                    <h:commandButton id="save" value="Guardar" onclick="return save()"/>
+                <h:form id="saveData">
+                    <h:inputHidden id="jsondata" value="#{diagramManager.jsondata}" />
+                    <h:commandButton id="save" value="Guardar" onclick="return save()" action="#{diagramManager.save()}"/>
                 </h:form>    
                 <h:link value="Regresar" outcome="/student/home"/>
             </div>
@@ -38,12 +38,15 @@
         <script type="text/javascript" src="../js/diagram_type1.js"></script>
         <script type="text/javascript">
             function save(){
-                alert('Not implemented yet');
-                alert(JSON.stringify(canvas.toJSON()));
-                
-                return false;
+                if(step == 2){
+                    document.getElementById('saveData:jsondata').value = JSON.stringify(canvas.toJSON());
+                    return true;
+                }else{
+                    alert('Aun no has terminado');
+                    return false;
+                }
             }
-            init(2,1,1,3,2);
+            init(#{diagramManager.eqElements[0]},#{diagramManager.eqElements[1]},#{diagramManager.eqElements[2]},#{diagramManager.eqElements[3]},#{diagramManager.solution});
         </script>
     </h:body>
 </html>
