Ahora funciona agregar y modificar y borrar grupos.
Eliminada la funcion de administrar grupos, pasado a profesor.

--- a/web/teacher/home.xhtml
+++ b/web/teacher/home.xhtml
@@ -15,6 +15,9 @@
         Welcome teacher <h:outputText value="#{sessionBean.names} #{sessionBean.surnames}" /><br />
         <h:form>
             <h:commandLink action="#{sessionBean.logout()}" value="Cerrar sesión" />
+            <h:dataTable>
+                
+            </h:dataTable>
         </h:form>
     </h:body>
 </html>
