--- a/web/administrator/home.xhtml
+++ b/web/administrator/home.xhtml
@@ -109,9 +109,26 @@
                 </h:dataTable>
             </h:form>
             <h:form id="groupMenu" rendered="#{adminManagerGroup.showGroupMenu}">
-                <h:commandLink action="#{adminManagerGroup.setIsAddingtoGroup(true)}" value="A&ntilde;adir estudiante a grupo" >
+                <h:commandLink action="#{adminManagerGroup.setIsAddingtoGroup(true)}" value="A&ntilde;adir Grupo nuevo" >
                     <f:ajax execute="@form" render="@form"/>
                 </h:commandLink>
+                <h:panelGrid id="addGroupPanel" columns="2" rendered="#{adminManagerGroup.isAddingtoGroup}">
+                    <f:facet name="header">New Group</f:facet>
+                    <h:outputText value="Group Name"/>
+                    <h:outputText value="Group Teacher"/>
+                    <h:inputText value="#{adminManagerGroup.newGroup.newName}"/>
+                    <h:selectOneMenu value = "#{adminManagerGroup.newGroup.teacherID}"> 
+                        <f:selectItems value="#{adminManagerGroup.teacherList}" var="tl" itemLabel="#{tl.user.surnames}" itemValue="#{tl.iduser}"/>
+                    </h:selectOneMenu>
+                    <h:panelGrid id="addUserPanelcommands" columns="2" border="1">
+                        <h:commandLink value="Save" action="#{adminManagerGroup.saveNewGroup(adminManagerGroup.newGroup)}">
+                            <f:ajax execute="@form" render="@form"/>
+                        </h:commandLink>
+                        <h:commandLink value="Cancel" action="#{adminManagerGroup.setIsAddingtoGroup(false)}">
+                            <f:ajax render="@form" />
+                        </h:commandLink>
+                    </h:panelGrid>
+                </h:panelGrid>
                 <h:dataTable id="groupTable" value="#{adminManagerGroup.groupTable}" var="groupt">
                     <h:column>
                         <f:facet name="header">Group Name</f:facet>
@@ -120,8 +137,8 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">Teacher in charge</f:facet>
-                        <h:outputText value="#{groupt.group.teacher.user.firstnames}" rendered="#{groupt.show}"/>
-                        <h:selectOneMenu value="#{groupt.group.teacher}" rendered="#{!groupt.show}">
+                        <h:outputText value="#{groupt.teacher.user.firstnames}" rendered="#{groupt.show}"/>
+                        <h:selectOneMenu value="#{groupt.teacherID}" rendered="#{!groupt.show}">
                             <f:selectItems value="#{adminManagerGroup.teacherList}" var="tl" itemLabel="#{tl.user.surnames}" itemValue="#{tl.iduser}"/>
                         </h:selectOneMenu>
                     </h:column>
@@ -137,12 +154,6 @@
                             <f:ajax execute="@form" render="@form"/>
                         </h:commandLink>
                         <h:commandLink action="#{adminManagerGroup.buildGroupTable()}" value="Cancelar" rendered="#{!groupt.show}"><br/>
-                            <f:ajax execute="@form" render="@form"/>
-                        </h:commandLink>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">Manage Students</f:facet>
-                        <h:commandLink action="#{groupt.editGroup}" value="Gestion de Estudiantes" rendered="#{groupt.show}"><br/>
                             <f:ajax execute="@form" render="@form"/>
                         </h:commandLink>
                     </h:column>
