--- a/web/student/diagram/solve.xhtml
+++ b/web/student/diagram/solve.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Crear diagrama - Estudiante</title>
-        <link rel="stylesheet" type="text/css" href="../css/diagram_type1.css" />
+        <link rel="stylesheet" type="text/css" href="../../css/diagram_solve.css" />
     </h:head>
     <h:body>
         <div class="canvas">
@@ -34,8 +34,8 @@
             </div>
         </div>
         
-        <script type="text/javascript" src='../js/fabric.js'></script>
-        <script type="text/javascript" src="../js/diagram_type1.js"></script>
+        <script type="text/javascript" src='../../js/fabric.js'></script>
+        <script type="text/javascript" src="../../js/diagram_solve.js"></script>
         <script type="text/javascript">
             function save(){
                 if(step == 2){
@@ -46,7 +46,7 @@
                     return false;
                 }
             }
-            init(#{diagramManager.eqElements[0]},#{diagramManager.eqElements[1]},#{diagramManager.eqElements[2]},#{diagramManager.eqElements[3]},#{diagramManager.solution});
+            init(#{diagramManager.eqElements[0]},#{diagramManager.eqElements[1]},#{diagramManager.eqElements[2]},#{diagramManager.eqElements[3]},#{diagramManager.solution[0]});
         </script>
     </h:body>
 </html>
