Mejoras en los scripts de los ejercicios: - Ahora ya se pueden seleccionar multiples objetos y moverlos o eliminarlos - Ajuste de archivos para mejor control - Mejoras de rendimiento y correción de errores

--- a/web/student/diagram/substitute.xhtml
+++ b/web/student/diagram/substitute.xhtml
@@ -35,17 +35,9 @@
         </div>
         
         <script type="text/javascript" src='../../js/fabric.js'></script>
+        <script type="text/javascript" src="../../js/diagram_master.js"></script>
         <script type="text/javascript" src="../../js/diagram_substitute.js"></script>
         <script type="text/javascript">
-            function save(){
-                if(step == 2){
-                    document.getElementById('saveData:jsondata').value = JSON.stringify(canvas.toJSON());
-                    return true;
-                }else{
-                    alert('Aun no has terminado');
-                    return false;
-                }
-            }
             init(#{diagramManager.eqElements[0]},#{diagramManager.eqElements[1]},#{diagramManager.eqElements[2]},#{diagramManager.solution[0]});
         </script>
     </h:body>
