--- a/web/teacher/teachergroup.xhtml
+++ b/web/teacher/teachergroup.xhtml
@@ -14,13 +14,13 @@
         <h:messages></h:messages>
         <p>Welcome Teacher, to group #{teacherGroupManager.group.name}</p>
         <h:outputText value="#{sessionBean.names} #{sessionBean.surnames}" /><br />
-        <h:form>
+        <h:form id="addNewExcecise">
             <h:commandLink value="Volver" action="home.xhtml"/><br/>
             <h:commandLink action="#{sessionBean.logout()}" value="Cerrar sesión" /><br/>
             <h:commandLink value="Add Exercise" action="#{teacherGroupManager.setAddingExercise(true)}">
-                <f:ajax render="addExercise" execute="addExercise"/>
+                <f:ajax execute=":addExercise" render=":addExercise"/>
             </h:commandLink><br/>
-            <h:panelGrid id="addExercise" columns="3" border="1" rendered="#{teacherGroupManager.addingExercise}">
+            <h:panelGrid id="addExercise" columns="3" border="1" rendered="#{!teacherGroupManager.addingExercise}">
                 <h:outputText value="Equation (read the rules)"/>
                 <h:outputText value="Equation Type"/>
                 <h:outputText value="Solution"/>
@@ -36,6 +36,8 @@
                     <f:ajax render="@form" />
                 </h:commandLink>
             </h:panelGrid>
+        </h:form>
+        <h:form id="showExercises">
             <h:dataTable value="#{teacherGroupManager.exercises}" var="ex" rendered="#{teacherGroupManager.hasExercises}">
                 <h:column>
                     <f:facet name="header">Equation</f:facet>
@@ -50,24 +52,39 @@
                     <h:outputText value="#{ex.solution}"/>
                 </h:column>
             </h:dataTable>
+        </h:form>
+        <h:form id="addNewStudent">
             <h:commandLink value="Add Student" action="#{teacherGroupManager.setAddingStudent(true)}">
-                <f:ajax render="@form" execute="@form"/>
+                <f:ajax execute="@form" render="@form"/>
             </h:commandLink>
-            <h:panelGrid id="addStudent" columns="1" border="1" rendered="#{teacherGroupManager.addingStudent}">
+            <h:panelGrid id="addStudent" columns="1" border="1" rendered="#{!teacherGroupManager.addingStudent}">
                 <h:outputText value="Student Name"/>
-                <h:selectOneMenu value = "#{teacherGroupManager.newStudent.iduser}"> 
+                <h:selectOneMenu value = "#{teacherGroupManager.newStudent}"> 
                     <f:selectItems value="#{teacherGroupManager.allStudents}" var="stud" itemLabel="#{stud.user.firstnames} #{stud.user.surnames}" itemValue="#{stud.iduser}"/>
                 </h:selectOneMenu>
-                <h:commandLink value="Save" action="#{teacherGroupManager.saveNewStudent()}">
+                <h:commandLink value="Save" action="#{teacherGroupManager.saveNewStudent(teacherGroupManager.newStudent)}">
                     <f:ajax execute="@form" render="@form"/>
                 </h:commandLink>
                 <h:commandLink value="Cancel" action="#{teacherGroupManager.setAddingStudent(false)}">
                     <f:ajax render="@form" />
                 </h:commandLink>
             </h:panelGrid>
+        </h:form>
+        <h:form id="showUsers">
             <h:dataTable value="#{teacherGroupManager.students}" var="st" rendered="#{teacherGroupManager.hasStudents}">
                 <h:column>
-                    <f:facet name="header"></f:facet>
+                    <f:facet name="header">Student Name</f:facet>
+                    <h:outputText value="#{st.user.firstnames}"/>
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Student Surname</f:facet>
+                    <h:outputText value="#{st.user.surnames}"/>
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Remove</f:facet>
+                    <h:commandLink value="Remove" action="#{teacherGroupManager.deleteUser(st.iduser)}">
+                        <f:ajax render="@form" />
+                    </h:commandLink>
                 </h:column>
             </h:dataTable>
         </h:form>
