--- a/web/teacher/teachergroup.xhtml
+++ b/web/teacher/teachergroup.xhtml
@@ -14,13 +14,10 @@
         <h:messages></h:messages>
         <p>Welcome Teacher, to group #{teacherGroupManager.group.name}</p>
         <h:outputText value="#{sessionBean.names} #{sessionBean.surnames}" /><br />
-        <h:form id="addNewExcecise">
+        <h:form id="ExerciseTeacher">
             <h:commandLink value="Volver" action="home.xhtml"/><br/>
             <h:commandLink action="#{sessionBean.logout()}" value="Cerrar sesión" /><br/>
-            <h:commandLink value="Add Exercise" action="#{teacherGroupManager.setAddingExercise(true)}">
-                <f:ajax execute=":addExercise" render=":addExercise"/>
-            </h:commandLink><br/>
-            <h:panelGrid id="addExercise" columns="3" border="1" rendered="#{!teacherGroupManager.addingExercise}">
+            <h:panelGrid id="addExercise" columns="3" border="1">
                 <h:outputText value="Equation (read the rules)"/>
                 <h:outputText value="Equation Type"/>
                 <h:outputText value="Solution"/>
@@ -29,15 +26,10 @@
                     <f:selectItem itemValue = "solve" itemLabel = "solve" />
                 </h:selectOneMenu> 
                 <h:inputText value="#{teacherGroupManager.newExercise.solution}"/>
-                <h:commandLink value="Save" action="#{teacherGroupManager.saveNewExercise()}">
+                <h:commandLink value="Save" action="#{teacherGroupManager.saveNewExercise(teacherGroupManager.newExercise)}">
                     <f:ajax execute="@form" render="@form"/>
                 </h:commandLink>
-                <h:commandLink value="Cancel" action="#{teacherGroupManager.setAddingExercise(false)}">
-                    <f:ajax render="@form" />
-                </h:commandLink>
             </h:panelGrid>
-        </h:form>
-        <h:form id="showExercises">
             <h:dataTable value="#{teacherGroupManager.exercises}" var="ex" rendered="#{teacherGroupManager.hasExercises}">
                 <h:column>
                     <f:facet name="header">Equation</f:facet>
@@ -51,13 +43,16 @@
                     <f:facet name="header">Solution</f:facet>
                     <h:outputText value="#{ex.solution}"/>
                 </h:column>
+                <h:column>
+                    <f:facet name="header">Remove</f:facet>
+                    <h:commandLink value="Remove" action="#{teacherGroupManager.deleteExercise(ex.idexercise)}">
+                        <f:ajax render="@form" />
+                    </h:commandLink>
+                </h:column>
             </h:dataTable>
         </h:form>
-        <h:form id="addNewStudent">
-            <h:commandLink value="Add Student" action="#{teacherGroupManager.setAddingStudent(true)}">
-                <f:ajax execute="@form" render="@form"/>
-            </h:commandLink>
-            <h:panelGrid id="addStudent" columns="1" border="1" rendered="#{!teacherGroupManager.addingStudent}">
+        <h:form id="StudentsTeacher">
+            <h:panelGrid id="addStudent" columns="1" border="1">
                 <h:outputText value="Student Name"/>
                 <h:selectOneMenu value = "#{teacherGroupManager.newStudent}"> 
                     <f:selectItems value="#{teacherGroupManager.allStudents}" var="stud" itemLabel="#{stud.user.firstnames} #{stud.user.surnames}" itemValue="#{stud.iduser}"/>
@@ -65,12 +60,7 @@
                 <h:commandLink value="Save" action="#{teacherGroupManager.saveNewStudent(teacherGroupManager.newStudent)}">
                     <f:ajax execute="@form" render="@form"/>
                 </h:commandLink>
-                <h:commandLink value="Cancel" action="#{teacherGroupManager.setAddingStudent(false)}">
-                    <f:ajax render="@form" />
-                </h:commandLink>
             </h:panelGrid>
-        </h:form>
-        <h:form id="showUsers">
             <h:dataTable value="#{teacherGroupManager.students}" var="st" rendered="#{teacherGroupManager.hasStudents}">
                 <h:column>
                     <f:facet name="header">Student Name</f:facet>
